--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="loading">
     <div class="loader"></div>
   </div>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="main.dart.js?version=1" type="application/javascript"></script>
 </body>
 <style>
   .loading {
